argocd/my-argo-demo/1-depl-svc.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: argo-demo-dep
  namespace: argo-demo
  labels:
    app: argo-demo
    color: blue
spec:
  replicas: 2
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: argo-demo
      color: blue
  template:
    metadata:
      labels:
        app: argo-demo
        color: blue
    spec:
      containers:
      - name: argo-demo
        image: argoproj/rollouts-demo:bad-purple   # https://hub.docker.com/r/argoproj/rollouts-demo/tags
        ports:
        - containerPort: 8080
        resources:
          requests:
            cpu: "6m"
            memory: "4Mi"
          limits:
            cpu: "12m"
            memory: "12Mi"
            
---
apiVersion: v1
kind: Service
metadata:
  name: argo-demo-svc
  namespace: argo-demo
  annotations:
    alb.ingress.kubernetes.io/healthcheck-path: /
spec:
  selector:
    app: argo-demo
    color: blue
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080 # 80

# kubectl run curl --image=alpine/curl:8.2.1 -n kube-system -i --tty --rm -- sh
# while true; do curl -s myapp.default:8080 | grep -e "--"; sleep 1; done
# <h1>-- BLUE | .....</h1>
# <h1>-- BLUE | .....</h1>
# <h1>-- .... | GREEN</h1>
# <h1>-- .... | GREEN</h1>
