argocd/my-argo-demo/9-ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argo-demo-ing  # rk-ing-v1
  namespace: argo-demo
  annotations:
    alb.ingress.kubernetes.io/load-balancer-name: rk-ing-v1
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/healthcheck-protocol: HTTP
    alb.ingress.kubernetes.io/healthcheck-port: traffic-port
    alb.ingress.kubernetes.io/healthcheck-interval-seconds: '15'
    alb.ingress.kubernetes.io/healthcheck-timeout-seconds: '5'
    alb.ingress.kubernetes.io/success-codes: '200-299'
    alb.ingress.kubernetes.io/healthy-threshold-count: '2'
    alb.ingress.kubernetes.io/unhealthy-threshold-count: '2'
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/ssl-redirect: '443'
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS":443}, {"HTTP":80}]'
    alb.ingress.kubernetes.io/group.name: rk.ing.group
  # alb.ingress.kubernetes.io/group.order: '0'
spec:
  rules:
    - host: argodemo.ops.perf.openjawhosting.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: argo-demo-svc
                port:
                  number: 80
